--- a/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
+++ b/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
@@ -173,6 +173,52 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="EvaluateAppSettings" rowHeight="174" id="GG6-zE-vbI">
+                                        <rect key="frame" x="0.0" y="475.33333333333337" width="375" height="174"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GG6-zE-vbI" id="k88-oo-ff5">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="173.66666666666666"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Version 1.1.2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOp-WM-HhZ">
+                                                    <rect key="frame" x="10" y="35" width="355" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Ⓒ 2018 YourVocab.com." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ej-xa-Zho">
+                                                    <rect key="frame" x="10" y="52" width="355" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
+                                                    <color key="textColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jsT-0G-aPY">
+                                                    <rect key="frame" x="10" y="70" width="355" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
+                                                    <color key="textColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="YourVocabulary" translatesAutoresizingMaskIntoConstraints="NO" id="NKN-eK-X7J">
+                                                    <rect key="frame" x="98" y="0.0" width="209" height="25"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="jsT-0G-aPY" secondAttribute="trailing" constant="10" id="6LG-OX-Qs0"/>
+                                                <constraint firstItem="jsT-0G-aPY" firstAttribute="top" secondItem="7Ej-xa-Zho" secondAttribute="bottom" id="6rP-MF-2hP"/>
+                                                <constraint firstAttribute="trailing" secondItem="fOp-WM-HhZ" secondAttribute="trailing" constant="10" id="7lo-nz-jCH"/>
+                                                <constraint firstItem="NKN-eK-X7J" firstAttribute="top" secondItem="k88-oo-ff5" secondAttribute="top" constant="10" id="F5C-vZ-8IG"/>
+                                                <constraint firstItem="7Ej-xa-Zho" firstAttribute="leading" secondItem="k88-oo-ff5" secondAttribute="leading" constant="10" id="KA0-0j-ErR"/>
+                                                <constraint firstItem="7Ej-xa-Zho" firstAttribute="top" secondItem="fOp-WM-HhZ" secondAttribute="bottom" id="Oaz-OL-CCO"/>
+                                                <constraint firstItem="fOp-WM-HhZ" firstAttribute="top" secondItem="NKN-eK-X7J" secondAttribute="bottom" id="QgH-wM-e92"/>
+                                                <constraint firstItem="NKN-eK-X7J" firstAttribute="centerX" secondItem="k88-oo-ff5" secondAttribute="centerX" id="ebR-Iw-e8J"/>
+                                                <constraint firstItem="jsT-0G-aPY" firstAttribute="leading" secondItem="k88-oo-ff5" secondAttribute="leading" constant="10" id="kCt-Eu-vSe"/>
+                                                <constraint firstItem="fOp-WM-HhZ" firstAttribute="leading" secondItem="k88-oo-ff5" secondAttribute="leading" constant="10" id="kVE-UH-xfV"/>
+                                                <constraint firstAttribute="trailing" secondItem="7Ej-xa-Zho" secondAttribute="trailing" constant="10" id="ncj-HC-uQP"/>
+                                                <constraint firstAttribute="trailing" secondItem="fOp-WM-HhZ" secondAttribute="trailing" constant="10" id="oiO-lU-B9J"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -188,7 +234,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4is-r0-M2H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1158" y="810"/>
+            <point key="canvasLocation" x="1157.5999999999999" y="809.85221674876846"/>
         </scene>
         <!--Training Reminder View Controller-->
         <scene sceneID="eng-gE-F2f">
@@ -213,7 +259,7 @@
                                     <color key="titleColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="lZ9-XN-1Lv" kind="unwind" unwindAction="finishRestoringBackupWithSegue:" id="sQa-oT-7Vn"/>
+                                    <segue destination="lZ9-XN-1Lv" kind="unwind" identifier="finishSettingReminder" unwindAction="finishRestoringBackupWithSegue:" id="sQa-oT-7Vn"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="v4b-8q-bwk">
@@ -376,7 +422,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I0h-0t-YZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="lZ9-XN-1Lv" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1942" y="971"/>
+            <point key="canvasLocation" x="1969" y="953"/>
         </scene>
         <!--AppOnboarding-->
         <scene sceneID="WLK-We-vKz">
@@ -518,6 +564,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="YourVocabulary" width="176" height="25"/>
         <image name="bg" width="1243" height="2209"/>
         <image name="exit_icon" width="23" height="23"/>
         <image name="green_button" width="148" height="47"/>
